// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`com.mgmtp.a12.widgets.charts > render basic pie chart 1`] = `
.c0 .recharts-default-tooltip,
.c0 .recharts-pie:focus {
  outline: none;
}

<div
  class="recharts-wrapper c0 pie-chart"
  style="position: relative; cursor: default; width: 600px; height: 400px;"
>
  <svg
    class="recharts-surface"
    cx="50%"
    cy="50%"
    height="400"
    style="width: 100%; height: 100%;"
    viewBox="0 0 600 400"
    width="600"
  >
    <title />
    <desc />
    <defs>
      <clippath
        id="recharts3-clip"
      >
        <rect
          height="400"
          width="600"
          x="0"
          y="0"
        />
      </clippath>
    </defs>
    <g
      class="recharts-layer recharts-pie"
      tabindex="0"
    >
      <g
        class="recharts-layer"
      >
        <g
          class="recharts-layer recharts-pie-sector"
          tabindex="-1"
        />
        <g
          class="recharts-layer recharts-pie-sector"
          tabindex="-1"
        />
        <g
          class="recharts-layer recharts-pie-sector"
          tabindex="-1"
        />
      </g>
    </g>
  </svg>
  <div
    class="recharts-tooltip-wrapper recharts-tooltip-wrapper-right recharts-tooltip-wrapper-bottom"
    style="visibility: hidden; pointer-events: none; position: absolute; top: 0px; left: 0px; transform: translate(10px, 10px);"
    tabindex="-1"
  >
    <div
      class="recharts-default-tooltip"
      style="margin: 0px; padding: 10px; background-color: rgb(255, 255, 255); border: 1px solid rgb(204, 204, 204); white-space: nowrap;"
    >
      <p
        class="recharts-tooltip-label"
        style="margin: 0px;"
      />
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.charts > render pie chart with hideable legend 1`] = `
.c3 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Icons";
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c3 > span {
  display: inline-block;
}

.c3.c3 {
  max-width: unset;
}

.c1 {
  align-items: center;
  border: 2px solid transparent;
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-weight: 700;
  gap: 4px;
  outline: none;
  position: relative;
  text-transform: uppercase;
  vertical-align: middle;
  flex-shrink: 0;
  font-size: 1.125rem;
  height: 2rem;
  min-height: 0px;
  padding: 0px;
  width: 2rem;
  border-radius: 50%;
  box-shadow: none;
  background: rgb(41, 122, 36);
  color: rgb(255, 255, 255);
}

.c1 .c2 {
  user-select: none;
}

.c1 .c2 {
  color: inherit;
}

.c1 .c2 {
  font-size: inherit;
}

.c1:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: transparent;
  box-shadow: none;
  color: rgb(213, 0, 117);
  border: 2px solid rgb(213, 0, 117);
}

.c1:not(:disabled):focus {
  background-color: rgb(255, 255, 255);
  box-shadow: none;
  color: rgb(213, 0, 117);
  border: 2px solid rgb(213, 0, 117);
}

.h_inlineBlock.h_middleAlign .c1.c1 {
  display: block;
  height: auto;
  min-height: 0px;
}

.h_inlineBlock.h_middleAlign .c1.c1 > .c2 {
  display: block;
}

.c4 .c2 {
  user-select: none;
}

.c5 .c2 {
  display: inline-flex;
  font-size: 1.5rem;
}

.c5 .c2:not(.StyledVariantIconWrapper-sc-bMgxYI) {
  color: inherit;
}

.c0 .recharts-default-tooltip,
.c0 .recharts-pie:focus {
  outline: none;
}

@media (pointer: coarse) {
  .c1:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c1:not(:disabled):hover {
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c1:hover {
    outline: transparent solid 1px;
  }
}

@media (pointer: coarse) {
  .c1:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c1:not(:disabled):hover {
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

<div
  class="recharts-wrapper c0 pie-chart"
  style="position: relative; cursor: default; width: 600px; height: 400px;"
>
  <svg
    class="recharts-surface"
    cx="50%"
    cy="50%"
    height="400"
    style="width: 100%; height: 100%;"
    viewBox="0 0 600 400"
    width="600"
  >
    <title />
    <desc />
    <defs>
      <clippath
        id="recharts9-clip"
      >
        <rect
          height="400"
          width="568"
          x="0"
          y="0"
        />
      </clippath>
    </defs>
    <g
      class="recharts-layer recharts-pie"
      tabindex="0"
    >
      <g
        class="recharts-layer"
      >
        <g
          class="recharts-layer recharts-pie-sector"
          tabindex="-1"
        />
        <g
          class="recharts-layer recharts-pie-sector"
          tabindex="-1"
        />
        <g
          class="recharts-layer recharts-pie-sector"
          tabindex="-1"
        />
      </g>
    </g>
  </svg>
  <div
    class="recharts-legend-wrapper"
    style="position: absolute; width: auto; height: auto; right: 0px; top: 0px;"
  >
    <button
      class="c1 button button--icon button--primary"
      data-role="button"
      data-type="icon"
      data-variant-type="primary"
      title=""
      type="button"
    >
      <i
        class="c2 c3 plasma-icon"
        data-role="plasma-icon"
      >
        <span
          aria-hidden="true"
        >
          info
        </span>
      </i>
    </button>
  </div>
  <div
    class="recharts-tooltip-wrapper recharts-tooltip-wrapper-right recharts-tooltip-wrapper-bottom"
    style="visibility: hidden; pointer-events: none; position: absolute; top: 0px; left: 0px; transform: translate(10px, 10px);"
    tabindex="-1"
  >
    <div
      class="recharts-default-tooltip"
      style="margin: 0px; padding: 10px; background-color: rgb(255, 255, 255); border: 1px solid rgb(204, 204, 204); white-space: nowrap;"
    >
      <p
        class="recharts-tooltip-label"
        style="margin: 0px;"
      />
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.charts > render pie chart with horizontal legend 1`] = `
.c1 {
  background: rgb(255, 255, 255);
  font-family: "Open Sans", sans-serif;
  list-style-type: none;
  margin: 0px;
  padding: 0px;
}

.c4 {
  box-sizing: border-box;
  background-color: rgb(255, 255, 255);
  color: rgb(77, 77, 77);
  cursor: pointer;
  display: flex;
  flex-direction: column;
  position: relative;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

.c5 {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  flex-grow: 1;
  justify-content: flex-start;
  gap: 16px;
  min-height: 48px;
  outline: 0px;
  padding: 8px 16px;
}

.c5::before {
  content: "";
  inset: 0px;
  position: absolute;
  display: block;
}

.c5:focus::before {
  border: 2px solid rgb(213, 0, 117);
  margin: 1px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c7 {
  align-items: center;
  color: inherit;
  display: inline-flex;
  flex-shrink: 0;
  justify-content: center;
  position: relative;
}

.c8 {
  color: inherit;
  display: flex;
  flex: 1 1 auto;
  flex-direction: column;
  font-size: 0.875rem;
  font-weight: 400;
  position: relative;
}

.c9 {
  color: rgb(97, 111, 124);
  font-size: 0.75rem;
  position: relative;
  text-align: right;
}

.c2 {
  background-color: rgb(255, 255, 255);
  border: 1px solid rgb(181, 76, 23);
  font-family: "Open Sans", sans-serif;
  overflow: auto;
  display: inline-flex;
  flex: 1 1 0%;
  flex-wrap: wrap;
  height: auto;
}

.c2 .c3 {
  flex-grow: 1;
  flex-shrink: 0;
}

.c2.chart-legend--top,
.c2.chart-legend--above {
  margin-bottom: 16px;
}

.c2.chart-legend--bottom,
.c2.chart-legend--below {
  margin-top: 16px;
}

.c2.chart-legend--right {
  margin-left: 16px;
}

.c2.chart-legend--left {
  margin-right: 16px;
}

.c2 .c6 {
  border-radius: 50%;
  height: 12px;
  width: 12px;
}

.c0 .recharts-default-tooltip,
.c0 .recharts-pie:focus {
  outline: none;
}

@media (pointer: coarse) {
  .c5:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c5:active::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c5:hover::before {
    border: 2px solid rgb(213, 0, 117);
  }

  .c5:hover > :not([data-role="list-item-graphic"]) {
    text-decoration: none;
  }
}

<div
  class="recharts-wrapper c0 pie-chart"
  style="position: relative; cursor: default; width: 600px; height: 400px;"
>
  <svg
    class="recharts-surface"
    cx="50%"
    cy="50%"
    height="400"
    style="width: 100%; height: 100%;"
    viewBox="0 0 600 400"
    width="600"
  >
    <title />
    <desc />
    <defs>
      <clippath
        id="recharts5-clip"
      >
        <rect
          height="286"
          width="600"
          x="0"
          y="0"
        />
      </clippath>
    </defs>
    <g
      class="recharts-layer recharts-pie"
      tabindex="0"
    >
      <g
        class="recharts-layer"
      >
        <g
          class="recharts-layer recharts-pie-sector"
          tabindex="-1"
        />
        <g
          class="recharts-layer recharts-pie-sector"
          tabindex="-1"
        />
        <g
          class="recharts-layer recharts-pie-sector"
          tabindex="-1"
        />
      </g>
    </g>
  </svg>
  <div
    class="recharts-legend-wrapper"
    style="position: absolute; width: 300px; height: auto; right: 0px; bottom: 0px;"
  >
    <ul
      class="c1 list c2 chart-legend chart-legend--layout-horizontal chart-legend--bottom chart-legend--right"
      data-role="pie-chart-legend"
      style="max-height: 400px; max-width: 300px;"
    >
      <li
        class="c3 c4 list-item "
        data-role="list-item"
      >
        <div
          aria-disabled="false"
          class="c5 list-item__content"
          data-role="list-item-content"
          role="button"
          tabindex="0"
        >
          <div
            aria-hidden="true"
            class="c6 c7"
            data-role="list-item-graphic"
            style="background-color: rgb(5, 98, 148);"
          />
          <div
            class="c8 list-item__text"
            data-role="list-item-text"
          >
            Mar
          </div>
          <div
            class="c9 list-item__meta"
            data-role="list-item-meta"
          >
            23
          </div>
        </div>
      </li>
      <li
        class="c3 c4 list-item "
        data-role="list-item"
      >
        <div
          aria-disabled="false"
          class="c5 list-item__content"
          data-role="list-item-content"
          role="button"
          tabindex="0"
        >
          <div
            aria-hidden="true"
            class="c6 c7"
            data-role="list-item-graphic"
            style="background-color: rgb(255, 205, 41);"
          />
          <div
            class="c8 list-item__text"
            data-role="list-item-text"
          >
            Jan
          </div>
          <div
            class="c9 list-item__meta"
            data-role="list-item-meta"
          >
            20
          </div>
        </div>
      </li>
      <li
        class="c3 c4 list-item "
        data-role="list-item"
      >
        <div
          aria-disabled="false"
          class="c5 list-item__content"
          data-role="list-item-content"
          role="button"
          tabindex="0"
        >
          <div
            aria-hidden="true"
            class="c6 c7"
            data-role="list-item-graphic"
            style="background-color: rgb(25, 103, 25);"
          />
          <div
            class="c8 list-item__text"
            data-role="list-item-text"
          >
            Feb
          </div>
          <div
            class="c9 list-item__meta"
            data-role="list-item-meta"
          >
            14
          </div>
        </div>
      </li>
    </ul>
  </div>
  <div
    class="recharts-tooltip-wrapper recharts-tooltip-wrapper-right recharts-tooltip-wrapper-bottom"
    style="visibility: hidden; pointer-events: none; position: absolute; top: 0px; left: 0px; transform: translate(10px, 10px);"
    tabindex="-1"
  >
    <div
      class="recharts-default-tooltip"
      style="margin: 0px; padding: 10px; background-color: rgb(255, 255, 255); border: 1px solid rgb(204, 204, 204); white-space: nowrap;"
    >
      <p
        class="recharts-tooltip-label"
        style="margin: 0px;"
      />
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.charts > render pie chart with unsorted legend 1`] = `
.c1 {
  background: rgb(255, 255, 255);
  font-family: "Open Sans", sans-serif;
  list-style-type: none;
  margin: 0px;
  padding: 0px;
}

.c4 {
  box-sizing: border-box;
  background-color: rgb(255, 255, 255);
  color: rgb(77, 77, 77);
  cursor: pointer;
  display: flex;
  flex-direction: column;
  position: relative;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

.c5 {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  flex-grow: 1;
  justify-content: flex-start;
  gap: 16px;
  min-height: 48px;
  outline: 0px;
  padding: 8px 16px;
}

.c5::before {
  content: "";
  inset: 0px;
  position: absolute;
  display: block;
}

.c5:focus::before {
  border: 2px solid rgb(213, 0, 117);
  margin: 1px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c7 {
  align-items: center;
  color: inherit;
  display: inline-flex;
  flex-shrink: 0;
  justify-content: center;
  position: relative;
}

.c8 {
  color: inherit;
  display: flex;
  flex: 1 1 auto;
  flex-direction: column;
  font-size: 0.875rem;
  font-weight: 400;
  position: relative;
}

.c9 {
  color: rgb(97, 111, 124);
  font-size: 0.75rem;
  position: relative;
  text-align: right;
}

.c10 .c3 {
  flex-grow: 1;
  flex-shrink: 0;
}

.c10 .c6 {
  border-radius: 50%;
  height: 12px;
  width: 12px;
}

.c11 .c6 {
  border-radius: 50%;
  height: 12px;
  width: 12px;
}

.c2 {
  background-color: rgb(255, 255, 255);
  border: 1px solid rgb(181, 76, 23);
  font-family: "Open Sans", sans-serif;
  overflow: auto;
}

.c2.chart-legend--top,
.c2.chart-legend--above {
  margin-bottom: 16px;
}

.c2.chart-legend--bottom,
.c2.chart-legend--below {
  margin-top: 16px;
}

.c2.chart-legend--right {
  margin-left: 16px;
}

.c2.chart-legend--left {
  margin-right: 16px;
}

.c2 .c6 {
  border-radius: 50%;
  height: 12px;
  width: 12px;
}

.c0 .recharts-default-tooltip,
.c0 .recharts-pie:focus {
  outline: none;
}

@media (pointer: coarse) {
  .c5:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c5:active::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c5:hover::before {
    border: 2px solid rgb(213, 0, 117);
  }

  .c5:hover > :not([data-role="list-item-graphic"]) {
    text-decoration: none;
  }
}

<div
  class="recharts-wrapper c0 pie-chart"
  style="position: relative; cursor: default; width: 600px; height: 400px;"
>
  <svg
    class="recharts-surface"
    cx="50%"
    cy="50%"
    height="400"
    style="width: 100%; height: 100%;"
    viewBox="0 0 600 400"
    width="600"
  >
    <title />
    <desc />
    <defs>
      <clippath
        id="recharts11-clip"
      >
        <rect
          height="400"
          width="469"
          x="0"
          y="0"
        />
      </clippath>
    </defs>
    <g
      class="recharts-layer recharts-pie"
      tabindex="0"
    >
      <g
        class="recharts-layer"
      >
        <g
          class="recharts-layer recharts-pie-sector"
          tabindex="-1"
        />
        <g
          class="recharts-layer recharts-pie-sector"
          tabindex="-1"
        />
        <g
          class="recharts-layer recharts-pie-sector"
          tabindex="-1"
        />
      </g>
    </g>
  </svg>
  <div
    class="recharts-legend-wrapper"
    style="position: absolute; width: auto; height: auto; right: 0px; top: 0px;"
  >
    <ul
      class="c1 list c2 chart-legend chart-legend--top chart-legend--right"
      data-role="pie-chart-legend"
      style="max-height: 400px; max-width: 300px;"
    >
      <li
        class="c3 c4 list-item "
        data-role="list-item"
      >
        <div
          aria-disabled="false"
          class="c5 list-item__content"
          data-role="list-item-content"
          role="button"
          tabindex="0"
        >
          <div
            aria-hidden="true"
            class="c6 c7"
            data-role="list-item-graphic"
            style="background-color: rgb(5, 98, 148);"
          />
          <div
            class="c8 list-item__text"
            data-role="list-item-text"
          >
            Mar
          </div>
          <div
            class="c9 list-item__meta"
            data-role="list-item-meta"
          >
            23
          </div>
        </div>
      </li>
      <li
        class="c3 c4 list-item "
        data-role="list-item"
      >
        <div
          aria-disabled="false"
          class="c5 list-item__content"
          data-role="list-item-content"
          role="button"
          tabindex="0"
        >
          <div
            aria-hidden="true"
            class="c6 c7"
            data-role="list-item-graphic"
            style="background-color: rgb(255, 205, 41);"
          />
          <div
            class="c8 list-item__text"
            data-role="list-item-text"
          >
            Jan
          </div>
          <div
            class="c9 list-item__meta"
            data-role="list-item-meta"
          >
            20
          </div>
        </div>
      </li>
      <li
        class="c3 c4 list-item "
        data-role="list-item"
      >
        <div
          aria-disabled="false"
          class="c5 list-item__content"
          data-role="list-item-content"
          role="button"
          tabindex="0"
        >
          <div
            aria-hidden="true"
            class="c6 c7"
            data-role="list-item-graphic"
            style="background-color: rgb(25, 103, 25);"
          />
          <div
            class="c8 list-item__text"
            data-role="list-item-text"
          >
            Feb
          </div>
          <div
            class="c9 list-item__meta"
            data-role="list-item-meta"
          >
            14
          </div>
        </div>
      </li>
    </ul>
  </div>
  <div
    class="recharts-tooltip-wrapper recharts-tooltip-wrapper-right recharts-tooltip-wrapper-bottom"
    style="visibility: hidden; pointer-events: none; position: absolute; top: 0px; left: 0px; transform: translate(10px, 10px);"
    tabindex="-1"
  >
    <div
      class="recharts-default-tooltip"
      style="margin: 0px; padding: 10px; background-color: rgb(255, 255, 255); border: 1px solid rgb(204, 204, 204); white-space: nowrap;"
    >
      <p
        class="recharts-tooltip-label"
        style="margin: 0px;"
      />
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.charts > render pie chart with vertical legend 1`] = `
.c1 {
  background: rgb(255, 255, 255);
  font-family: "Open Sans", sans-serif;
  list-style-type: none;
  margin: 0px;
  padding: 0px;
}

.c4 {
  box-sizing: border-box;
  background-color: rgb(255, 255, 255);
  color: rgb(77, 77, 77);
  cursor: pointer;
  display: flex;
  flex-direction: column;
  position: relative;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

.c5 {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  flex-grow: 1;
  justify-content: flex-start;
  gap: 16px;
  min-height: 48px;
  outline: 0px;
  padding: 8px 16px;
}

.c5::before {
  content: "";
  inset: 0px;
  position: absolute;
  display: block;
}

.c5:focus::before {
  border: 2px solid rgb(213, 0, 117);
  margin: 1px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c7 {
  align-items: center;
  color: inherit;
  display: inline-flex;
  flex-shrink: 0;
  justify-content: center;
  position: relative;
}

.c8 {
  color: inherit;
  display: flex;
  flex: 1 1 auto;
  flex-direction: column;
  font-size: 0.875rem;
  font-weight: 400;
  position: relative;
}

.c9 {
  color: rgb(97, 111, 124);
  font-size: 0.75rem;
  position: relative;
  text-align: right;
}

.c10 .c3 {
  flex-grow: 1;
  flex-shrink: 0;
}

.c10 .c6 {
  border-radius: 50%;
  height: 12px;
  width: 12px;
}

.c2 {
  background-color: rgb(255, 255, 255);
  border: 1px solid rgb(181, 76, 23);
  font-family: "Open Sans", sans-serif;
  overflow: auto;
  flex: 0 0 auto;
}

.c2.chart-legend--top,
.c2.chart-legend--above {
  margin-bottom: 16px;
}

.c2.chart-legend--bottom,
.c2.chart-legend--below {
  margin-top: 16px;
}

.c2.chart-legend--right {
  margin-left: 16px;
}

.c2.chart-legend--left {
  margin-right: 16px;
}

.c2 .c6 {
  border-radius: 50%;
  height: 12px;
  width: 12px;
}

.c0 .recharts-default-tooltip,
.c0 .recharts-pie:focus {
  outline: none;
}

@media (pointer: coarse) {
  .c5:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c5:active::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c5:hover::before {
    border: 2px solid rgb(213, 0, 117);
  }

  .c5:hover > :not([data-role="list-item-graphic"]) {
    text-decoration: none;
  }
}

<div
  class="recharts-wrapper c0 pie-chart"
  style="position: relative; cursor: default; width: 600px; height: 400px;"
>
  <svg
    class="recharts-surface"
    cx="50%"
    cy="50%"
    height="400"
    style="width: 100%; height: 100%;"
    viewBox="0 0 600 400"
    width="600"
  >
    <title />
    <desc />
    <defs>
      <clippath
        id="recharts7-clip"
      >
        <rect
          height="400"
          width="300"
          x="0"
          y="0"
        />
      </clippath>
    </defs>
    <g
      class="recharts-layer recharts-pie"
      tabindex="0"
    >
      <g
        class="recharts-layer"
      >
        <g
          class="recharts-layer recharts-pie-sector"
          tabindex="-1"
        />
        <g
          class="recharts-layer recharts-pie-sector"
          tabindex="-1"
        />
        <g
          class="recharts-layer recharts-pie-sector"
          tabindex="-1"
        />
      </g>
    </g>
  </svg>
  <div
    class="recharts-legend-wrapper"
    style="position: absolute; width: 300px; height: auto; right: 0px; bottom: 0px;"
  >
    <ul
      class="c1 list c2 chart-legend chart-legend--layout-vertical chart-legend--bottom chart-legend--right"
      data-role="pie-chart-legend"
      style="max-height: 400px; max-width: 300px;"
    >
      <li
        class="c3 c4 list-item "
        data-role="list-item"
      >
        <div
          aria-disabled="false"
          class="c5 list-item__content"
          data-role="list-item-content"
          role="button"
          tabindex="0"
        >
          <div
            aria-hidden="true"
            class="c6 c7"
            data-role="list-item-graphic"
            style="background-color: rgb(5, 98, 148);"
          />
          <div
            class="c8 list-item__text"
            data-role="list-item-text"
          >
            Mar
          </div>
          <div
            class="c9 list-item__meta"
            data-role="list-item-meta"
          >
            23
          </div>
        </div>
      </li>
      <li
        class="c3 c4 list-item "
        data-role="list-item"
      >
        <div
          aria-disabled="false"
          class="c5 list-item__content"
          data-role="list-item-content"
          role="button"
          tabindex="0"
        >
          <div
            aria-hidden="true"
            class="c6 c7"
            data-role="list-item-graphic"
            style="background-color: rgb(255, 205, 41);"
          />
          <div
            class="c8 list-item__text"
            data-role="list-item-text"
          >
            Jan
          </div>
          <div
            class="c9 list-item__meta"
            data-role="list-item-meta"
          >
            20
          </div>
        </div>
      </li>
      <li
        class="c3 c4 list-item "
        data-role="list-item"
      >
        <div
          aria-disabled="false"
          class="c5 list-item__content"
          data-role="list-item-content"
          role="button"
          tabindex="0"
        >
          <div
            aria-hidden="true"
            class="c6 c7"
            data-role="list-item-graphic"
            style="background-color: rgb(25, 103, 25);"
          />
          <div
            class="c8 list-item__text"
            data-role="list-item-text"
          >
            Feb
          </div>
          <div
            class="c9 list-item__meta"
            data-role="list-item-meta"
          >
            14
          </div>
        </div>
      </li>
    </ul>
  </div>
  <div
    class="recharts-tooltip-wrapper recharts-tooltip-wrapper-right recharts-tooltip-wrapper-bottom"
    style="visibility: hidden; pointer-events: none; position: absolute; top: 0px; left: 0px; transform: translate(10px, 10px);"
    tabindex="-1"
  >
    <div
      class="recharts-default-tooltip"
      style="margin: 0px; padding: 10px; background-color: rgb(255, 255, 255); border: 1px solid rgb(204, 204, 204); white-space: nowrap;"
    >
      <p
        class="recharts-tooltip-label"
        style="margin: 0px;"
      />
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.charts > render responsive chart container with pie chart 1`] = `
.c0 .recharts-wrapper {
  font-size: 0.75rem;
  font-family: "Open Sans", sans-serif;
}

.c0 .lineChart {
  margin-right: 20px;
}

.c0 .barChart__axis-label,
.c0 .lineChart__axis-label {
  font-weight: 700;
}

.c0 .recharts-text {
  fill: rgb(77, 77, 77);
}

.c0 .recharts-legend-wrapper {
  padding: 10px;
}

.c1 .recharts-default-tooltip,
.c1 .recharts-pie:focus {
  outline: none;
}

<div
  class="recharts-responsive-container c0"
  style="width: 100%; height: 400px; min-width: 0px;"
>
  <div
    class="recharts-wrapper c1 pie-chart"
    style="position: relative; cursor: default; width: 100%; height: 100%; max-height: 853.333px; max-width: 1280px;"
  >
    <svg
      class="recharts-surface"
      cx="50%"
      cy="50%"
      height="853.3333333333334"
      style="width: 100%; height: 100%;"
      viewBox="0 0 1280 853.3333333333334"
      width="1280"
    >
      <title />
      <desc />
      <defs>
        <clippath
          id="recharts1-clip"
        >
          <rect
            height="853.3333333333334"
            width="1280"
            x="0"
            y="0"
          />
        </clippath>
      </defs>
      <g
        class="recharts-layer recharts-pie"
        tabindex="0"
      >
        <g
          class="recharts-layer"
        >
          <g
            class="recharts-layer recharts-pie-sector"
            tabindex="-1"
          />
          <g
            class="recharts-layer recharts-pie-sector"
            tabindex="-1"
          />
          <g
            class="recharts-layer recharts-pie-sector"
            tabindex="-1"
          />
        </g>
      </g>
    </svg>
    <div
      class="recharts-tooltip-wrapper recharts-tooltip-wrapper-right recharts-tooltip-wrapper-bottom"
      style="visibility: hidden; pointer-events: none; position: absolute; top: 0px; left: 0px; transform: translate(10px, 10px);"
      tabindex="-1"
    >
      <div
        class="recharts-default-tooltip"
        style="margin: 0px; padding: 10px; background-color: rgb(255, 255, 255); border: 1px solid rgb(204, 204, 204); white-space: nowrap;"
      >
        <p
          class="recharts-tooltip-label"
          style="margin: 0px;"
        />
      </div>
    </div>
  </div>
</div>
`;
